Bug 167395 - RMB/Configure toolbars on the bookmarks toolbar doesn't work
Summary: RMB/Configure toolbars on the bookmarks toolbar doesn't work
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-25 04:28 UTC by Fred Wells
Modified: 2009-03-06 14:28 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments
Proposed patch, launch default context menu when there is not action(bookmark) at the mouse position (1.18 KB, patch)
2009-03-06 12:49 UTC, Dario Andres
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fred Wells 2008-07-25 04:28:48 UTC
Version:            (using KDE 4.0.98)
Installed from:    Debian testing/unstable Packages
OS:                Linux

Right-click anywhere on any toolbar offers "Toolbar Menu" for configuration, except the bookmark toolbar.  This feature seems to be missing exclusively from the bookmark toolbar.
Comment 1 Fred Wells 2008-12-06 23:14:37 UTC
So, what's needed to get this moved from UNCONFIRMED to NEW status and, hopefully, get someone to consider/address it?  :)
Comment 2 Dario Andres 2009-01-06 15:30:46 UTC
Here using:

Qt: 4.4.3 + qt-copy-patches-889120
KDE: 4.1.87 (KDE 4.1.87 (KDE 4.2 >= 20090101))
kdelibs svn rev. 906436 / kdebase svn rev. 906436
on ArchLinux x86_64 - Kernel 2.6.27.10

I can reproduce this
Comment 3 Chris Laux 2009-03-05 05:03:27 UTC
I've just updated to KDE 4.2.1 (using Factory RPMs on openSuse 11.1), and I also have this problem.

Anything I can do to help with this? I can code, but I fear this is not an easy fix, else it would be resolved by now. :/
Comment 4 Dario Andres 2009-03-06 12:24:55 UTC
It looks like that the Bookmarks tab is implemented in a different way (as it needs to accept drag&drop for URLs). Not sure why it doesn't trigger the default menu for Toolbars...
Comment 5 Dario Andres 2009-03-06 12:49:10 UTC
Created attachment 31830 [details]
Proposed patch, launch default context menu when there is not action(bookmark) at the mouse position
Comment 6 Dario Andres 2009-03-06 14:20:03 UTC
SVN commit 935866 by darioandres:

Show default (KToolBar) context menu in BookmarksToolbar if no action(bookmark) is clicked.

BUG:167395



 M  +15 -4     konqbookmarkbar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=935866
Comment 7 Dario Andres 2009-03-06 14:28:36 UTC
SVN commit 935874 by darioandres:

Backport to 4.2branch of:
SVN commit 935866 by darioandres:

Show default (KToolBar) context menu in BookmarksToolbar if no action(bookmark)
is clicked.

CCBUG:167395


 M  +15 -4     konqbookmarkbar.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=935874