Show default (KToolBar) context menu in BookmarksToolbar if no action(bookmark) is clicked.

BUG:167395


svn path=/trunk/KDE/kdebase/apps/; revision=935866